@@ -488,7 +488,7 @@ void StreamsPage::exportXml()
 
 void StreamsPage::add()
 {
-    StreamDialog dlg(getCategories(), getGenres(), MPDConnection::self()->urlHandlers(), this);
+    StreamDialog dlg(getCategories(), getGenres(), this);
 
     if (QDialog::Accepted==dlg.exec()) {
         QString name=dlg.name();
@@ -582,7 +582,7 @@ void StreamsPage::edit()
         return;
     }
 
-    StreamDialog dlg(getCategories(), getGenres(), MPDConnection::self()->urlHandlers(), this);
+    StreamDialog dlg(getCategories(), getGenres(), this);
     StreamsModel::StreamItem *stream=static_cast<StreamsModel::StreamItem *>(item);
     QString url=stream->url.toString();
     QString cat=stream->parent->name;
