@@ -48,6 +48,8 @@
 26. Add import of IceCast and SomaFM streams.
 27. Move server info into a dialog.
 28. Add support for Jamendo and Magnatune streams.
+29. Add 'Add Stream' button to play queue - so that streams can be quickly
+    added without needing to store in streams page.
 
 0.9.2
 -----
